reset the cell offset when a row becomes again visible, order the rowgroups before collapsing the rows bug 242253 r/sr=dbaron